--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,69 @@
     }
 }
 
+.p-datatable-footer {
+    border-radius: 10px;
+
+}
+
+.p-datatable .p-paginator-bottom {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.p-datatable .p-datatable-thead>tr>:first-child {
+    border-top-left-radius: 10px;
+}
+
+.p-datatable .p-datatable-thead>tr>:last-child {
+    border-top-right-radius: 10px;
+}
+
 .ui-datatable tbody td {
     white-space: normal;
 }
+
+.p-datatable .p-datatable-header {
+    background: transparent;
+    border: 1px solid #F9F9F9;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    padding: 0;
+    font-weight: normal;
+}
+
+.p-datatable.p-datatable-sm .p-datatable-header {
+    background: transparent !important
+}
+
+.p-datatable .p-sortable-column {
+    background: white;
+
+}
+
+.p-datatable .p-datatable-thead>tr>th {
+    background: white;
+    border: 1px solid #F9F9F9;
+}
+
+.p-datatable .p-datatable-tbody>tr>td {
+    border: 1px solid #F9F9F9;
+    border-width: 0 0 1px 0;
+
+}
+
+.p-datatable .p-sortable-column.p-highlight .p-sortable-column-icon,
+.p-datatable .p-sortable-column.p-highlight:not(.p-sortable-disabled):hover .p-sortable-column-icon,
+.p-datatable .p-sortable-column:not(.p-highlight):not(.p-sortable-disabled):hover .p-sortable-column-icon,
+.p-datatable .p-sortable-column .p-sortable-column-icon {
+    color: #9E9E9E;
+}
+
+/* .p-datatable .p-sortable-column.p-highlight:not(.p-sortable-disabled):hover .p-sortable-column-icon {
+    color: #9E9E9E;
+}
+
+.p-datatable .p-sortable-column:not(.p-highlight):not(.p-sortable-disabled):hover .p-sortable-column-icon {
+    color: #9E9E9E;
+} */
