--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,13 @@
     font-weight: normal;
 }
 
+.p-paginator {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
 .p-datatable.p-datatable-sm .p-datatable-header {
     background: transparent !important
 }
@@ -76,4 +83,8 @@
 .p-datatable .p-sortable-column.p-highlight:not(.p-sortable-disabled):hover,
 .p-datatable .p-sortable-column:not(.p-highlight):not(.p-sortable-disabled):hover {
     background-color: white;
+}
+
+.p-datatable-table {
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
