Start working on Right SideBar withdraw info

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,3 +88,7 @@
 .p-datatable-table {
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
+
+.p-sidebar-right .p-sidebar {
+    width: 30rem;
+}
