right sidebar after API and need to be continue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -119,6 +119,10 @@
     background-color: #4375FF;
 }
 
+.ready+.p-timeline-event-connector {
+    background-color: #4375FF;
+}
+
 .requested+.p-timeline-event-connector {
     background-color: #4375FF;
 }
